test: CRUDs-Auth tests and doc fixes
